<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView style="?cardView">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageUser"
                        style="@style/Avatar"
                        android:onClick="uploadAvatar" />

                    <ImageView
                        android:id="@+id/plusAvatar"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="80dp"
                        android:src="@drawable/ic_plus_orange_24dp" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textProfile"
                        style="?textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/groupProfile"
                        style="?textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="none"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="openSettings"
                android:src="@drawable/ic_settings_24dp"
                android:tint="?ic_active_color" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="?cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/achievementsTextView"
                style="?textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/achievementsProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/progressbar" />

            <TextView
                android:id="@+id/starsTextView"
                style="?textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/starsProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/progressbar" />

            <CheckBox
                android:id="@+id/checkboxHide"
                style="?checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/hide"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>