<resources>
    <string name="app_name">StudentAchievements</string>
    <string name="pass">Пароль</string>
    <string name="login">Логин</string>
    <string name="enter">Войти</string>
    <string name="icon">Иконка</string>
    <string name="search">Поиск</string>
    <string name="exit">Выход</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="group_number">Номер группы</string>
    <string name="profile_vis">Кто видит мой профиль</string>
    <string name="all">Все пользователи</string>
    <string name="groupmates">Одногруппники</string>
    <string name="me">Только я</string>
    <string name="search_results">Результаты поиска</string>
    <string name="hide">Скрыть полученные достижения</string>
    <string name="appearance">Внешний вид</string>
    <string name="dark_theme">Темная тема</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="no_favorites">Нет избранных пользователей</string>
    <string name="no_search_results">По вашему запросу ничего не найдено</string>
    <string name="favorites">Избранные</string>
    <string name="top_all">Общий</string>
    <string name="top_group">Группа</string>
    <string name="top_direction">Поток</string>
    <string name="top_year">Курс</string>
    <string name="date">Дата</string>
    <string name="hours">Часы</string>
    <string name="mark">Оценка</string>
    <string name="exam">Экзамен</string>
    <string name="rating_info">В рейтинге отображаются только пользователи с настройками приватности \"Все пользователи\"</string>
    <string name="place">место</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ask_delete_account">Вы уверены, что хотите удалить свой аккаунт из базы данных приложения?</string>
</resources>
