...
                android:id="@+id/buttonDeleteAccount"
                style="?button"
                android:onClick="deleteAccount"
                android:text="@string/delete_account" />

            <Button
                android:id="@+id/buttonExit"
                style="?button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="exit"
                android:text="@string/exit" />
        </LinearLayout>
...
